AP  28- allow nfsubfields([nf,fa],): van Hoeij-Klueners-Novocin algorithm
    29- nfsubfields: retune to avoid huge inertia degrees
BA  30- qfbsolve new flag: bit 1: 1 solution, bit 2: add imprimitive solutions
BA  31- revert 2-12-0 C18: qfbsolve with default flag = previous behaviour
    32- division/inversion power series: use Newton
    33- deprecate LLL_COMPATIBLE (now implicitly always set)

  Added
     1- new GP function rootsof1
BA   2- [libpari] F2xqX_halfgcd, FFX_halfgcd
     3- [libpari] uis2psp, uispsp
     4- [libpari] ZV_lcm
     5- [libpari] nfhyperellpadicfrobenius
     6- [libpari] rnf_get_ramified_primes
     7- allow nfinit([T, basis, ramified primes])
     8- allow nf.p, rnf.p [rational ramified primes]
     9- [libpari] idealfactor_partial
    10- add flag bit to ZM_snfall_i
    11- allow real t_QUAD in floor, ceil, divrem, %, \, \/
    12- [libpari] ff_parse_Tp
    13- new GP function mfisetaquo
    14- [libpari] Qab_tracerel, QabV_tracerel, QabM_tracerel
BA  15- [libpari] RgXV_to_FlxV, FlxV_Flv_multieval,
                  F2v_and_inplace, F2v_negimply_inplace, F2v_or_inplace,
                  F2v_hamming
    16- [libpari] ZpX_primedec
BA  17- [libpari] QM_sqr, FqC_to_mod, ZXQX_gcd, QXQX_gcd
    18- [libpari] radicalu
    19- parallel support for lfuninit
    20- new GP function parplothexport
BA  21- [libpari] gen_ZpM_Newton, ZpM_invlift
BA  22- [libpari] F2xn_red, F2xn_inv, F2xX_to_F2xC, F2xXV_to_F2xM
HC  23- direct formulas for quadratic Dirichlet L-functions at integers
    24- new GP functions: eulerfrac, eulerpol, eulervec
    25- [libpari] lfunquadneg
BA  26- [libpari] vecvecsmall_sort_inplace, vecsmall_isconst, vecsmall_is1to1
BA  27- [libpari] groupelts_quotient, quotient_groupelts, groupelts_to_group
    28- new GP functions mscosets, msfarey
    29- new GP function ellpadiclambdamu
BA  30- [libpari] Flx_Fl_sub, Flx_is_totally_split, Flxq_autpowers
    31- [libpari] Flx_translate1_basecase
    32- [libpari] Vgaeasytheta