@@ -4,6 +4,7 @@
 [0, Mod(0, 2), 1, 0, 0, 0, 0]~
 [0, Mod(1, 2), 1, 0, 1, 0, 0]~
 []~
+[0, Mod(0, 2), 37, 0, 20, 0, 0]~
 []~
 []~
 [0, Mod(1, 2)]~
@@ -14,4 +15,4 @@
 [2]
 5.6285569682787745211960896402558797363
 [2, [2], [[11, 1; 0, 1]]]
-Total time spent: 4
+Total time spent: 5
